[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Alessio Coltellacci <lightplay8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plex = "0.2"
llvm-sys = "90.0"
clap = { git = "https://github.com/clap-rs/clap/" }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm9-0" }
libc = "0.2.69"
uuid = { version = "0.4", features = ["v4"] }
